@@ -1,3 +1,4 @@
 4.5.0
 *************
 - Modify trg_om_visit_multievent to allow insert using uuid
+- Update v_plan_netscenario views to filter by selector_expl.expl_id for current user + current_netscenario
